--- a/docs/reference/search/request-body.asciidoc
+++ b/docs/reference/search/request-body.asciidoc
@@ -108,6 +108,8 @@ include::request/script-fields.asciidoc[]
 
 include::request/fielddata-fields.asciidoc[]
 
+include::request/termvectors.asciidoc[]
+
 include::request/post-filter.asciidoc[]
 
 include::request/highlighting.asciidoc[]
